
<resources>
    <string name="app_name" translatable="false">Emoji Maker</string>
    <string name="this_action">This action may contain advertising.</string>
    <string name="title1">Make Emoji</string>
    <string name="title2">Create Text</string>
    <string name="title3">Change background</string>
    <string name="content1">Customize your own sticker using various items of every part on the face.</string>
    <string name="content2">Make a impressive emoji-message with special shapes, symbols, fonts and colors..</string>
    <string name="content3">Set your emoji on new scene by putting it in a relatable background. </string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="add_text">Add text</string>
    <string name="your_text">Your text here</string>
    <string name="text_isemty">Text Is Not Found, Please Insert Text First.</string>
    <string name="no_creation">No creation yet.</string>
    <string name="cam_per">Camera permission is necessary...</string>
    <string name="custom_smiley">Customize Smiley</string>
    <string name="new_emoji">New Emoji</string>
    <string name="new_text">New Text Style</string>
    <string name="create">Create</string>
    <string name="text">Text</string>
    <string name="Emoji">Emoji</string>
    <string name="Exit">Exit</string>
    <string name="Reset">Reset</string>
    <string name="Quit">Quit</string>
    <string name="Stay">Stay</string>
    <string name="my_creation">My creation</string>
    <string name="are_you">Are you sure you want to quit?</string>
    <string name="are_you_reset">Are you sure want to reset your drawing?</string>
    <string name="choose">Choose Background color</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="more_app">More App</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="Thankyou">Thank you</string>
    <string name="version">Version</string>
    <string name="policy">Privacy Policy.</string>
    <string name="opinion">Your opinion matter to us</string>
    <string name="you_know">If you enjoy this Emoji Maker, would \nyou mind rating us on the Google Play, then?</string>
    <string name="not_now">Not now</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="one_delete">Once deleted can not be recovered.</string>
    <string name="Delete">Delete</string>
    <string name="please_select">Please select Icon to delete</string>
    <string name="please_remove">Please add sticker to remove</string>
    <string name="please_flip">Please add sticker to flip</string>
    <string name="please_text">Please add text</string>
    <string name="home">Home</string>
    <string name="font_size">Font size</string>
    <string name="Export">Export</string>
    <string name="get_started">Get Started</string>
</resources>