<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp15"
    app:cardCornerRadius="@dimen/dp15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp20"
        android:paddingVertical="@dimen/dp20">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewBase"
            android:layout_gravity="center"
            android:text="@string/add_text"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            app:cardBackgroundColor="#FAEEEF"
            app:cardCornerRadius="@dimen/dp10"
            app:cardElevation="0dp"
            app:strokeColor="@color/white">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text"
                style="@style/TextViewBase"
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/your_text"
                android:paddingVertical="@dimen/dp10"
                android:paddingStart="@dimen/dp10"
                android:shadowColor="#D7C3B8"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:textColorHint="#D7C3B8" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                style="@style/TextViewBase"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/bg_button_cancel"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:textColor="#988E90" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok"
                style="@style/TextViewBase"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_ok"
                android:text="@string/Ok"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>