<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:padding="@dimen/dp50"
        android:id="@+id/ig_splash"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_app"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:letterSpacing="0.04"
        android:id="@+id/text"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ig_splash"
        android:text="@string/app_name"
        style="@style/TextViewBase"/>
    <TextView
        android:id="@+id/version"
        android:textColor="#768EA7"
        android:letterSpacing="0.03"
        android:textSize="@dimen/sp14"
        android:text="@string/version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        style="@style/TextViewBase"/>

    <TextView
        android:id="@+id/policy"
        style="@style/TextViewBase"
        android:layout_marginTop="50dp"
        android:letterSpacing="0.03"
        android:text="@string/policy"
        android:textColor="#DF6F00"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version" />

</androidx.constraintlayout.widget.ConstraintLayout>