<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/TextViewBase"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp5"
                android:fontFamily="@font/poppins_semibold_600"
                android:text="@string/Delete"
                android:textSize="@dimen/sp20" />

            <TextView
                style="@style/TextViewBase"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/poppins_regular_400"
                android:text="@string/one_delete"
                android:textColor="#988E90"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/ll_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_image"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    style="@style/TextViewBase"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_cancel"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingVertical="8dp"
                    android:text="@string/Cancel"
                    android:textColor="#988E90"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/delete"
                    style="@style/TextViewBase"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_cancel"
                    android:backgroundTint="#BA1A1A"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingVertical="8dp"
                    android:text="@string/Delete"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
