<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/ln_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp10"
        android:paddingVertical="@dimen/dp20"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="1.2"
            android:src="@drawable/language" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="0dp"
            android:layout_weight="7.8"
            android:fontFamily="@font/poppins_regular_400"
            android:text="@string/language"
            android:textColor="@color/color_241912"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_text_language"
                style="@style/TextViewBase"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium_500"
                android:text="English"
                android:textColor="#DF6F00"
                android:textSize="@dimen/sp18" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="center"
                android:padding="@dimen/dp4"
                android:src="@drawable/right" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dp10"
        android:background="#EBE0E1"
        app:layout_constraintTop_toBottomOf="@+id/ln_language" />

    <LinearLayout
        android:id="@+id/ln_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp10"
        android:paddingVertical="@dimen/dp20"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@+id/v1">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="0.9"
            android:src="@drawable/rate" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="0dp"
            android:layout_weight="9.1"
            android:fontFamily="@font/poppins_regular_400"
            android:text="@string/rate"
            android:textColor="@color/color_241912"
            android:textSize="@dimen/sp18" />
    </LinearLayout>

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dp10"
        android:background="#EBE0E1"
        app:layout_constraintTop_toBottomOf="@+id/ln_rate" />

    <LinearLayout
        android:id="@+id/ln_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp10"
        android:paddingVertical="@dimen/dp20"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@+id/v2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="0.9"
            android:padding="2dp"
            android:src="@drawable/share" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="0dp"
            android:layout_weight="9.1"
            android:fontFamily="@font/poppins_regular_400"
            android:text="@string/share"
            android:textColor="@color/color_241912"
            android:textSize="@dimen/sp18" />
    </LinearLayout>

    <View
        android:id="@+id/v3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dp10"
        android:background="#EBE0E1"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ln_share" />

    <LinearLayout
        android:id="@+id/ln_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp10"
        android:paddingVertical="@dimen/dp20"
        android:visibility="gone"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@+id/v3">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="0.9"
            android:src="@drawable/more_app" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="0dp"
            android:layout_weight="9.1"
            android:fontFamily="@font/poppins_regular_400"
            android:text="@string/more_app"
            android:textColor="@color/color_241912"
            android:textSize="@dimen/sp18" />
    </LinearLayout>

    <View
        android:id="@+id/v4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dp10"
        android:background="#EBE0E1"
        app:layout_constraintTop_toBottomOf="@+id/ln_more" />

    <LinearLayout
        android:id="@+id/ln_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp10"
        android:paddingVertical="@dimen/dp20"
        app:layout_constraintTop_toBottomOf="@+id/v4"
        tools:layout_editor_absoluteX="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="0.9"
            android:src="@drawable/about" />

        <TextView
            style="@style/TextViewBase"
            android:layout_width="0dp"
            android:layout_weight="8.1"
            android:fontFamily="@font/poppins_regular_400"
            android:text="@string/about"
            android:textColor="@color/color_241912"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/right" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>